# pulse-sensor-amped-plugin

./: CMakeLists.txt  README.md  win-pulse-sensor-amped.c  win-serial-reader.c  win-serial-reader.h
data/locale/: en-US.ini
